changed the wrong image from logo to main image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span><a href="https://marketplace.visualstudio.com/VSCode">Extensions</a></span>
         <span><a href="https://code.visualstudio.com/docs/supporting/faq">FAQs</a></span>
     <div>
-        <img src="Assets/logo.jpg" height="450px" width="700px" alt="main image of VS Code showing the code coloring.">
+        <img src="Assets/main image.png" height="450px" width="700px" alt="main image of VS Code showing the code coloring.">
     </div>
     <a target="_blank" href="https://code.visualstudio.com/updates/v1_92">Version 1.92</a> is unvailable! Read about the new features and fixes from July.
     <div>
