completed the full structure also added download link with download button

--- a/index.html
+++ b/index.html
@@ -34,8 +34,27 @@
     </div>
     <br />
 
-    <div>
-        <img src="Assets/main image.png" width="800px" alt="main image of VS Code showing the code coloring.">
+    <div class="base">
+        <div class="base-description">
+            <input type="none" placeholder="Free. Built on open source. Runs everywhere.">
+
+            <div class="code-editing">
+                Code Editing.
+            </div>
+            <div class="redefined">
+                Redefined.
+            </div>
+            <br />
+            <a href="https://code.visualstudio.com/docs/?dv=win64user" class="button-link">Download for Windows</a>
+            <div>
+                <a href="https://vscode.dev/">Web</a>, <a href="https://code.visualstudio.com/insiders/">Insiders edition</a> or <a href="https://code.visualstudio.com/Download">other platforms</a>
+            </div>
+            <br />
+            <p>By using VS Code, you agree to its <a href="https://code.visualstudio.com/license">license</a> and <a href="https://privacy.microsoft.com/en-us/privacystatement">privacy statement</a>.</p>
+        </div>
+        <div class="base-image">
+            <img src="Assets/main image.png" width="800px" alt="main image of VS Code showing the code coloring.">
+        </div>
     </div>
 </body>
 </html>
