--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <!-- </div> -->
     </div>
     <div>
-        <input type="text" placeholder="Search Docs">
-        <button>Download</button>
+        <input class="search" type="text" placeholder="Search Docs">
+        <a class="button1" href="https://code.visualstudio.com/Download">Download</a>
     </div>
 </div>  
     <br />
@@ -46,8 +46,8 @@
             </div>
             <br />
             <a href="https://code.visualstudio.com/docs/?dv=win64user" class="button-link">Download for Windows</a>
-            <div>
-                <a href="https://vscode.dev/">Web</a>, <a href="https://code.visualstudio.com/insiders/">Insiders edition</a> or <a href="https://code.visualstudio.com/Download">other platforms</a>
+            <div class="download-description">
+                <a class="below-download" href="https://vscode.dev/">Web</a>, <a class="below-download" href="https://code.visualstudio.com/insiders/">Insiders edition</a> or <a class="below-download" href="https://code.visualstudio.com/Download">other platforms</a>
             </div>
             <br />
             <p>By using VS Code, you agree to its <a href="https://code.visualstudio.com/license">license</a> and <a href="https://privacy.microsoft.com/en-us/privacystatement">privacy statement</a>.</p>
