completed version section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <br />
 
     <div class="version">
-        <a style="color:skyblue;" target="_blank" href="https://code.visualstudio.com/updates/v1_92"> Version 1.92 </a> 
+        <a style="color:#4daafc;" target="_blank" href="https://code.visualstudio.com/updates/v1_92"> Version 1.92 </a> 
         is available! Read about the new features and fixes from July.
     </div>
     <br />
