completed css of main image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <!-- <div class="header2"> -->
             <div class="vscl">
-                <a href="https://code.visualstudio.com/"><img class="Logo" src="Assets/download.png" alt="Vs Logo" width="25px" height="25px" style="padding-right: 5px;"></a>
+                <a href="https://code.visualstudio.com/"><img class="Logo" src="Assets/download.png" alt="Vs Logo" width="24px" height="24px" style="padding-right: 5px;"></a>
             </div>
             <div>
                 <a class="vcst" href="https://code.visualstudio.com/">Visual Studio Code</a>
@@ -24,7 +24,7 @@
             <a class="topLink" href="https://code.visualstudio.com/docs/supporting/faq">FAQs</a>
         <!-- </div> -->
     </div>
-    <div>
+    <div class="down-search">
         <input class="search" type="text" placeholder="Search Docs">
         <a class="button1" href="https://code.visualstudio.com/Download">Download</a>
     </div>
@@ -54,7 +54,7 @@
                 <a class="below-download" href="https://vscode.dev/">Web</a>, <a class="below-download" href="https://code.visualstudio.com/insiders/">Insiders edition</a> or <a class="below-download" href="https://code.visualstudio.com/Download">other platforms</a>
             </div>
             <br />
-            <p>By using VS Code, you agree to its <a href="https://code.visualstudio.com/license">license</a> and <a href="https://privacy.microsoft.com/en-us/privacystatement">privacy statement</a>.</p>
+            <p class="terms">By using VS Code, you agree to its <a class="license" href="https://code.visualstudio.com/license">license</a> and <a href="https://privacy.microsoft.com/en-us/privacystatement" class="privacy">privacy statement</a>.</p>
         </div>
         <div class="base-image">
             <img src="Assets/main image.png" width="800px" alt="main image of VS Code showing the code coloring.">
